<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Ametist</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logo" translatable="false">Ametist logo</string>
    <string name="email" translatable="false">Email</string>
    <string name="back">Back</string>
    <string name="photo">Photo</string>
    <string name="send">Send</string>
    <string name="choose_photo">Choose photo</string>
    <string name="lets_begin">Let\'s begin!</string>
    <string name="profile_photo">Profile photo</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="getting_last_seen">Getting last seen</string>
    <string name="type_a_message">Type a message</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="about">About</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="follow">Follow</string>
    <string name="send_message">Send message</string>
    <string name="expand">Expand</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="reset_balloons">Reset alert balloons</string>
    <string name="sign_out">Sign out</string>
    <string name="what_do_you_think">What do you think?</string>
    <string name="how_do_you_feel">How do you feel today?</string>
    <string name="what_happened">What happened?</string>
    <string name="search_user">Search users</string>
    <string name="password">Password</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="wellcome">Wellcome</string>
    <string name="onboarding_1">Communicate with the whole world or just with people you know.</string>
    <string name="stay_social">Stay social</string>
    <string name="onboarding_2">Find your friends or meet people you don\'t know. But no matter what, don\'t quit socializing! Ametist aims to make people social.</string>
    <string name="finish">Finish</string>
    <string name="dont_disconnect">Don\'t disconnect</string>
    <string name="onboarding_3">Enjoy video, audio or just written communication. Ametist offers all this for free.</string>
    <string name="sing_up">Sign up</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="more">See More</string>
    <string name="online">Online</string>
    <string name="last_seen">"Last seen: "</string>
    <string name="offline">Offline</string>
    <string name="homepage">Homepage</string>
    <string name="discover">Discover</string>
    <string name="notifications">Notifications</string>
    <string name="your_profile_here">Your profile page is here!</string>
    <string name="edit">Edit</string>
    <string name="crop">Crop</string>
    <string name="crop_portrait">Crop for portrait</string>
    <string name="crop_square">Crop for discover</string>
    <string name="saving">Saving</string>
    <string name="please_wait">Please wait…</string>
    <string name="restart_to_see_changes">You may need to restart app to see the changes.</string>
    <string name="unable_sign_out">Failed to log out</string>
    <string name="you">"You: "</string>
    <string name="notif_channel_description">This notification channel keeps you informed of incoming messages</string>
    <string name="sending">Sending</string>
    <string name="check_your_connection">Check your internet connection and try again.</string>
    <string name="it_is_case_sensitive">It is case sensitive!</string>
    <string name="error_at_login">There was a problem signing in. Check your internet connection</string>
    <string name="valid_email">You need to enter a valid email address</string>
    <string name="no_empty_password">Password field cannot be empty</string>
    <string name="six_char_password">Your password must be at least 6 characters</string>
    <string name="error_at_saving">Error writing data</string>
    <string name="error_at_creating_user">Error creating user</string>
    <string name="login">Login</string>
    <string name="unfollow">Unfollow</string>
    <string name="followed">Following</string>
    <string name="show_message_on_notif">Show message content on notifications</string>
    <string name="show_followername_on_notif">Show follower\'s name on new follower notification</string>
    <string name="new_message_received">New message received</string>
    <string name="is_now_following_you">" is now following you"</string>
    <string name="someone_is_following">Someone is now following you</string>
    <string name="new_follower">New follower</string>
    <string name="photo_preview">Photo preview</string>
    <string name="error_at_sending_text">Error at sending text message. Try again.</string>
    <string name="sent_you_a_photo">" sent you a photo"</string>
    <string name="photo_uploading">Uploading photo…</string>
    <string name="delete_post">Delete post</string>
    <string name="delete_post_question">Do you want to detete this post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="messagebox_empty">Messagebox is empty</string>
    <string name="show_more_comment">Show more comment</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="comments">Comments</string>
    <string name="see_and_add_a_comment">See and add a comment</string>
    <string name="like_post">Like post</string>
    <string name="unlike_post">Unlike post</string>
    <string name="ok">OK</string>
    <string name="new_post">New Post</string>
    <string name="back_button">Back Button</string>
    <string name="looking_for">Looking For</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="relationship">Relationship</string>
    <string name="role">Role</string>
    <string name="posts">Posts</string>
    <string name="block_user">Block User</string>
    <string name="no_messages">There are no messages here</string>
    <string name="no_posts">There are no posts here</string>
    <string name="start_conversation">Type something in the box below to start the conversation.</string>
    <string name="start_sharing">You can share something using the \"New Post\" button below or follow someone to see their posts.</string>
    <string name="only_friends">Only my friends can see</string>
    <string name="permission_title">We may need some permissions. You can give permission now or when necessary.</string>
    <string name="location">Location</string>
    <string name="location_perm_text">Required to let friends know where you are or to discover people nearby</string>
    <string name="storage_photos">Storage (Photos)</string>
    <string name="storage_perm_text">Necessary to share your photos with your friends</string>
    <string name="notification">Notification</string>
    <string name="notification_perm_text">Required so that we can notify you of received messages, photos and new followers</string>
    <string name="continue_">Continue</string>
    <string name="show_qr">Show my QR Code</string>
    <string name="cm" translatable="false">cm</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="scan_qr_code_message">Scan user\'s QR code</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="instead_of" tools:ignore="TypographyEllipsis">You can also use this instead...</string>
    <string name="reply_to">Reply to this message:</string>
    <string name="answer">Answer</string>
    <string name="delete">Delete</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="divorced">Divorced</string>
    <string name="top">Top</string>
    <string name="more_top">More Top</string>
    <string name="versatile">Versatile</string>
    <string name="more_bottom">More Bottom</string>
    <string name="bottom">Bottom</string>
    <string name="friendship">Friendship</string>
    <string name="love">Love</string>
    <string name="conversation">Conversation</string>
    <string name="gay">Gay</string>
    <string name="hetero">Heterosexual</string>
    <string name="lesbian">Lesbian</string>
    <string name="bisex">Bisexual</string>
    <string name="trans">Transexual</string>
    <string name="inter">Intersexual</string>
    <string name="other">Ohter</string>
    <string name="not_show">Do not show</string>
    <string name="sexuality">Sexuality</string>
    <string name="sign_up_date">Sign Up Date</string>
    <string name="kg" translatable="false">kg</string>
    <string name="add_photo">Add Photo</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="online_status">Share your online status</string>
    <string name="share_last_seen">Share last seen</string>
    <string name="privacy">Privacy</string>
    <string name="sending_post">Sending post...</string>
    <string name="default_web_client_id" translatable="false">800135909908-p9udsrig4igls1hi81v52bonjc5ob9pg.apps.googleusercontent.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="user_s_name">User\'s name</string>
    <string name="introduce_yourself">Introduce yourself</string>
</resources>