<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/toolbarBlur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/buttonMessages"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_toolbar_button"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_message"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/messages"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/buttonSettings"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_toolbar_button"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_settings"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonMessages"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/settings"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profileImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/profile_photo"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_light"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:shadowColor="@color/accent_purple_dark"
                android:shadowRadius="10"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/profileImage"
                app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
                app:layout_constraintStart_toEndOf="@id/profileImage"
                app:layout_constraintTop_toTopOf="@id/profileImage"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarBlur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/tabBarBlur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:tabMode="fixed"
        app:tabGravity="center"
        app:tabIndicatorGravity="stretch"
        app:tabSelectedTextColor="@color/accent_purple_dark"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="@color/primary_transparent"
        app:tabTextColor="@color/primary_text"
        app:tabInlineLabel="true"
        app:tabIconTint="@color/accent_purple_light"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    </eightbitlab.com.blurview.BlurView>

</androidx.constraintlayout.widget.ConstraintLayout>